--- a/echozone/src/App.css
+++ b/echozone/src/App.css
@@ -204,12 +204,21 @@ html, body {
   font-size: 1.5rem;
   user-select: none;
   -webkit-app-region: drag;
-  cursor: grab;
   transition: transform 0.2s ease;
-	width: 60px;
+	width: 40px;
+	height: 40px;
+	display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.move-window-icon:hover {
+.move-grab-cursor {
+  cursor: grab;
+  font-size: 1.5rem;
+  transition: transform 0.2s ease;
+}
+
+.move-grab-cursor:hover {
 	transform: scale(1.1);
 }
 
@@ -340,14 +349,14 @@ html, body {
 .aspect-box {
 	position: relative;
   aspect-ratio: 3 / 4;
-	border-radius: 10%;
+	border-radius: 15%;
   box-shadow:
     inset 0 0 60px rgba(255, 255, 255, 0.25),
     inset 0 0 100px rgba(0, 0, 0, 0.15);
 	/* width: auto; */
 	/* height: auto; */
-	width: 241px;
-	height: 163px;
+	width: 220px;
+	height: 165px;
 	/* min-width: 35%; */
   /* max-height: 75%; */
   overflow: hidden;
