--- a/echozone/src/App.css
+++ b/echozone/src/App.css
@@ -648,3 +648,19 @@ html, body {
     0 1px 1px rgba(255, 255, 255, 0.1);
 }
 
+.start-screen {
+  position: absolute;
+  inset: 0;
+  background: black;
+  color: #fff;
+	opacity: 0.9;
+	text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--sub-font), 'Courier New', monospace;
+  font-size: 1.3rem;
+  z-index: 2;
+  cursor: pointer;
+}
+
